Fix menu not showing on mobile

--- a/themes/classic/_dev/css/components/mainmenu.scss
+++ b/themes/classic/_dev/css/components/mainmenu.scss
@@ -34,7 +34,13 @@
     &.collapse {
       opacity: 0;
       visibility: hidden;
+
+      &.in {
+        opacity: 1;
+        visibility: visible;
+      }
     }
+
     box-shadow: 2px 1px 11px 2px rgba(0, 0, 0, 0.1);
     border: none;
     margin-left: 0.9375rem;
@@ -43,7 +49,7 @@
     z-index: 18;
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease, visibility .5s ease;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
     ul[data-depth="1"] > li {
       float: left;
       margin: 0 1.25rem;
